--- a/css/sessao3.css
+++ b/css/sessao3.css
@@ -1,5 +1,5 @@
 .sessao3 {
-    background: linear-gradient(10deg,  #FFFFFF 60%, rgba(235, 37, 29, 1) 40%);
+    background: linear-gradient(10deg,  #FFFFFF 60%, rgba(235, 37, 29, 1) 4%);
     height: 90vh;
 }
 
@@ -8,14 +8,39 @@
     justify-content: center;
     align-items: center;
     height: 100%; 
+    display: flex;
+    margin-top: -5%;
 }
-
-.elento {
+.elemento {
+    margin-left: 4%;
+    margin-right: 4%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 22%; 
+    height: 300px; 
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    transition: width 0.5s ease, height 0.5s ease;
 }
-
-/*.elento:hover {
+.elemento .imagem{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.elemento:hover{
+    width: 23%;
+    height: 350px;
     
-}*/
+}
+.elemento .imagem img{
+    width: 90%;
+}
+  .elemento .titulo_S1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.5rem;
+}
