--- a/css/sessao5.css
+++ b/css/sessao5.css
@@ -12,9 +12,15 @@
     height: 30%; 
     background-color: #FFFFFF; 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
     margin-top: 10%;
+}
+
+#card_5 img{
+    margin-right: 2rem;
+    margin-left: 2rem;
+    width: 100px;
 }
