--- a/css/confg.css
+++ b/css/confg.css
@@ -7,6 +7,7 @@
 html, body{
     height: 100%;
     flex-direction: column;
+    font-family: Poppin;
 }
 
 .titulo_sessao{
@@ -14,4 +15,19 @@ html, body{
     text-align: center;
     color: #ffffff;
     font-size: 2rem;
+    font-family: Potato;
+}
+
+@font-face {
+    font-family: Poppin;
+    src: url(../assets/fonts/Poppins-Regular.ttf);
+}
+@font-face {
+    font-family: Potato;
+    src: url(../assets/fonts/Potato_sans-Bold.otf);
+}
+
+@font-face {
+    font-family: PoppinB;
+    src: url(../assets/fonts/Poppins-ExtraBold.ttf);
 }
