--- a/css/sessao3.css
+++ b/css/sessao3.css
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 70%;
 }
 .elemento:hover{
     width: 23%;
@@ -43,4 +44,7 @@
     justify-content: center;
     text-align: center;
     font-size: 1.5rem;
+    font-family: potato;
+    color: rgba(235, 37, 29, 1);
+    height: 100px;
 }
