--- a/css/sessao1.css
+++ b/css/sessao1.css
@@ -4,20 +4,19 @@
 }
 
 #sessa1_esquerda {
-    width: 40%;
+    width: 60%;
     height: 100%;
     font-family: PoppinB;
 }
 #sessa1_direita {
-    width: 60%;
+    width: 40%;
     height: 100%;
 }
 #sessa1_esquerda {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
-    padding: 20px; 
+    align-items: center;
 }
 
 #sessa1_direita {
@@ -25,12 +24,32 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    
+}
+#sessa1_direita img{
+    align-items: start;
+    margin-right: 40%;
+    position: static;
+}
+
+#batata{
+    margin-top: -120px;
+    margin-right: 400px;
+
+}
+
+#batata img{
+    width: 250px;
+    z-index: 2;
+    justify-content: flex-start;
 }
 
 #texto_S1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
     text-align: center;
+    margin-top: 5%;
+    width: 40%;
+    color: #FF0000;
 }
 
 .button {
@@ -40,11 +59,15 @@
     padding: 20px 30px; 
     transition: background-color 0.3s, transform 0.3s; 
     cursor: pointer;
-    margin-top: 4rem;
+    margin-top: 1rem;
+    width: 280px;
+    text-align: center;
+    font-size: 20px;
 }
 
 .button:hover {
-    background-color: #FF3333; 
+    background-color: #972020; 
+    
 }
 
 .button:active {
