--- a/css/sessao3.css
+++ b/css/sessao3.css
@@ -1,50 +1,91 @@
 .sessao3 {
-    background: linear-gradient(10deg,  #FFFFFF 60%, rgba(235, 37, 29, 1) 4%);
-    height: 90vh;
+    height: 105%;
+    background: red;
 }
 
 #sessao3_S1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%; 
+    flex-direction: column; 
     display: flex;
-    margin-top: -5%;
 }
-.elemento {
+.elemento_e {
     margin-left: 4%;
     margin-right: 4%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    width: 22%; 
+    width: 90%; 
     height: 300px; 
-    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     transition: width 0.5s ease, height 0.5s ease;
 }
-.elemento .imagem{
+.elemento_d {
+    margin-left: 4%;
+    margin-right: 4%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    width: 90%; 
+    height: 300px; 
+    border-radius: 10px; 
+    transition: width 0.5s ease, height 0.5s ease;
+}
+.imagem_e{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 70%;
 }
-.elemento:hover{
-    width: 23%;
-    height: 350px;
-    
-}
-.elemento .imagem img{
-    width: 90%;
-}
-  .elemento .titulo_S1 {
+.imagem_d{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.imagem_e img{
+    width: 50%;
+    margin-left: 10%;
+}
+.imagem_d img{
+    width: 50%;
+    margin-right: 10%;
+}
+
+.titulo_S1_e{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
-    font-size: 1.5rem;
     font-family: potato;
-    color: rgba(235, 37, 29, 1);
-    height: 100px;
+    color: white;
+    width: 40%;
+    height: 100%;
+}
+
+.titulo_S1_d {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    font-family: potato;
+    color: white;
+    width: 40%;
+    height: 100%;
+}
+
+.titulo_S1_e p{
+    font-family: Poppin;
+}
+.titulo_S1_d p{
+    font-family: Poppin;
+}
+
+.titulo_S1_e h2{
+    font-size: 2.5rem;
+}
+.titulo_S1_d h2{
+    font-size: 2.5rem;
 }
