--- a/css/sessao4.css
+++ b/css/sessao4.css
@@ -1,9 +1,15 @@
 .sessao4 {
-    height: 93vh;
+    height: 120%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff; 
+    margin-bottom: 5%;
+    flex-direction: column;
+}
+
+.sessao4 .titulo_sessao h1{
+    color: red;
+    margin-bottom: 20%;
 }
 
 #card_4 {
@@ -13,14 +19,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5%;
     border-radius: 20px;
     
 }
 
-#titulo_card_4 img{
-    max-width: 200px; 
-    height: auto;
+#img_4{
+    margin-top: -150px;
+}
+
+#img_4 img{
+    max-width: 300px; 
+    
 }
 
 #texto_card_4{
@@ -29,4 +38,37 @@
     color: #FFFFFF;
     padding: 20px 30px; 
     text-align: center;
+}
+
+.titulo_4{
+    font-size: 30px;
+    color: #FFFFFF;
+}
+
+.ingredientes{
+    color: #FFFFFF;
+    width: 75%;
+}
+
+.linha4{
+    display: flex;
+    flex-direction: row;
+    width: 75%;
+}
+
+.imagemlud{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.imagemlud img{
+    width: 200px;
+    position:absolute;
+}
+
+.preparo{
+    width: 100%;
+    color: #FFFFFF;
+    margin-top: 5%;
 }
