--- a/css/sessao5.css
+++ b/css/sessao5.css
@@ -1,26 +1,36 @@
 .sessao5 {
-    height: 92vh; 
+    height: 93vh;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    background-color: rgba(235, 37, 29, 1); 
-    flex-direction: column;
+    background-image: url("https://i.pinimg.com/736x/3a/95/09/3a9509d990e801ee615cb64e9f4fbbd1.jpg"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 #card_5 {
-    width: 50%; 
-    height: 30%; 
-    background-color: #FFFFFF; 
+    width: 60%; 
+    height: 80%; 
+    background-color: rgba(235, 37, 29, 1); 
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    padding: 5%;
     border-radius: 20px;
-    margin-top: 10%;
+    border: 10px solid rgb(255, 255, 255);
+    
 }
 
-#card_5 img{
-    margin-right: 2rem;
-    margin-left: 2rem;
-    width: 100px;
+#titulo_card_5 img{
+    max-width: 200px; 
+    height: auto;
+}
+
+#texto_card_5{
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    padding: 20px 30px; 
+    text-align: center;
 }
