--- a/css/sessao6.css
+++ b/css/sessao6.css
@@ -1,75 +1,100 @@
 .contato {
-    background-color: #f8f8f8;
-    text-align: center;
-    padding: 100px 20px 60px;
-  }
-  
-  .contato-titulo {
-    font-size: 3rem;
-    font-weight: bold;
-    color: #e42320;
-    margin-bottom: 60px;
-    font-family: Potato;
-  }
-  
+  background-color: #f8f8f8;
+  text-align: center;
+  padding: 100px 20px 60px;
+}
+
+.contato-titulo {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #e42320;
+  margin-bottom: 60px;
+  font-family: Potato;
+}
+
+.contato-icones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+  margin-bottom: 60px;
+  flex-wrap: wrap;
+}
+
+.icone-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icone-item img {
+  width: 60px;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.icone-item p {
+  font-size: 1rem;
+  color: #d90000;
+  font-weight: bold;
+}
+
+.icone-item a {
+  text-decoration: underline;
+  color: #c10000;
+}
+
+.botao-whatsapp {
+  background-color: #ca1d1a;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 15px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+.botao-whatsapp:hover {
+  background-color: #8f0401;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 15px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+/* Rodapé */
+.rodape {
+  background-color: #f8f8f8;
+  text-align: center;
+  padding: 20px;
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.icone-item a{
+  text-decoration: none;
+}
+
+/* Responsivo */
+@media (max-width: 768px) {
   .contato-icones {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 80px;
-    margin-bottom: 60px;
-    flex-wrap: wrap;
-  }
-  
-  .icone-item {
-    display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 30px;
   }
-  
-  .icone-item img {
-    width: 60px;
-    height: auto;
-    margin-bottom: 10px;
-  }
-  
-  .icone-item p {
-    font-size: 1rem;
-    color: #d90000;
-    font-weight: bold;
-  }
-  
-  .icone-item a {
-    text-decoration: underline;
-    color: #d90000;
-  }
-  
+
   .botao-whatsapp {
-    background-color: #e42320;
-    color: white;
-    padding: 15px 30px;
-    border-radius: 15px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-decoration: none;
-    display: inline-block;
-    margin-top: 20px;
-  }
-  
-  /* Rodapé */
-  .rodape {
-    background-color: #f8f8f8;
-    text-align: center;
-    padding: 20px;
-    font-size: 0.9rem;
-    color: #555;
-  }
-  
-  /* Responsivo */
-  @media (max-width: 768px) {
-    .contato-icones {
-      flex-direction: column;
-      gap: 30px;
-    }
-  }
-  
+  background-color: #ca1d1a;
+  font-size: 1.2rem;
+}
+
+.botao-whatsapp:hover {
+  background-color: #8f0401;
+  font-size: 1.2rem
+}
+}
